Updated website with major changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p>
             Experience luxury, tranquility, and adventure — all in one place.
           </p>
-          <a href="#booking" class="btn-primary">Book Your Stay</a>
+          <a href="#booking-form" class="btn-primary">Book Your Stay</a>
         </article>
       </section>
 
@@ -50,7 +50,7 @@
         <ul class="services-grid">
           <li>
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636580/luxury_rooms.a_bxrw1m.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636580/luxury_rooms.a_bxrw1m.webp"
               alt="Luxury Rooms"
               loading="lazy"
             />
@@ -62,7 +62,7 @@
           </li>
           <li>
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636576/fine_dining.a_bxojur.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636576/fine_dining.a_bxojur.webp"
               alt="Fine Dining"
               loading="lazy"
             />
@@ -74,7 +74,7 @@
           </li>
           <li>
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636599/spa_and_wellness.a_bhxy90.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636599/spa_and_wellness.a_bhxy90.webp"
               alt="Spa & Wellness"
               loading="lazy"
             />
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636575/island_activities.a_qbkdts.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636575/island_activities.a_qbkdts.webp"
               alt="Island Activities"
               loading="lazy"
             />
@@ -109,7 +109,7 @@
         <div class="rooms-grid">
           <article class="room-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636574/deluxe_ocean_view.a_a7rycw.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636574/deluxe_ocean_view.a_a7rycw.webp"
               alt="Deluxe Ocean View Room"
               loading="lazy"
             />
@@ -120,13 +120,13 @@
                 breakfast.
               </p>
               <span class="price">Ksh 3500/night</span>
-              <a href="#booking" class="btn-secondary">Book Now</a>
+              <a href="#booking-form" class="btn-secondary">Book Now</a>
             </div>
           </article>
 
           <article class="room-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636602/private_villa.a_smrp1w.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636602/private_villa.a_smrp1w.webp"
               alt="Private Villa"
               loading="lazy"
             />
@@ -137,13 +137,13 @@
                 getaways.
               </p>
               <span class="price">Ksh 6000/night</span>
-              <a href="#booking" class="btn-secondary">Book Now</a>
+              <a href="#booking-form" class="btn-secondary">Book Now</a>
             </div>
           </article>
 
           <article class="room-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636574/family_suite.a_fdy8b9.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636574/family_suite.a_fdy8b9.webp"
               alt="Family Suite"
               loading="lazy"
             />
@@ -154,7 +154,7 @@
                 groups.
               </p>
               <span class="price">Ksh 4500/night</span>
-              <a href="#booking" class="btn-secondary">Book Now</a>
+              <a href="#booking-form" class="btn-secondary">Book Now</a>
             </div>
           </article>
         </div>
@@ -168,7 +168,7 @@
         <section class="cuisines-scroll">
           <article class="cuisine-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636581/jollof_rice.a_kvrvt3.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636581/jollof_rice.a_kvrvt3.webp"
               alt="Jollof Rice"
               loading="lazy"
             />
@@ -181,7 +181,7 @@
 
           <article class="cuisine-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636572/bunny_chow.a_awrevh.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636572/bunny_chow.a_awrevh.webp"
               alt="Bunny Chow"
               loading="lazy"
             />
@@ -194,7 +194,7 @@
 
           <article class="cuisine-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636590/injera.a_zdt9x9.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636590/injera.a_zdt9x9.webp"
               alt="Injera"
               loading="lazy"
             />
@@ -204,7 +204,7 @@
 
           <article class="cuisine-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636570/couscous.a_rhkla7.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636570/couscous.a_rhkla7.webp"
               alt="Couscous"
               loading="lazy"
             />
@@ -216,7 +216,7 @@
 
           <article class="cuisine-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636598/piripiri.a_ygvxwi.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636598/piripiri.a_ygvxwi.webp"
               alt="Piri Piri Chicken"
               loading="lazy"
             />
@@ -229,7 +229,7 @@
 
           <article class="cuisine-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636607/sadza.a_xqnks7.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636607/sadza.a_xqnks7.webp"
               alt="Sadza"
               loading="lazy"
             />
@@ -239,7 +239,7 @@
 
           <article class="cuisine-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636567/brochettes.a_hlbd0x.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636567/brochettes.a_hlbd0x.webp"
               alt="Brochettes"
               loading="lazy"
             />
@@ -261,7 +261,7 @@
         <article class="packages-wrapper">
           <article class="package-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636597/romantic_getaway.a_tn3u4r.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636597/romantic_getaway.a_tn3u4r.webp"
               alt="Romantic Getaway Package"
               loading="lazy"
             />
@@ -274,7 +274,7 @@
               <span class="package-price">Ksh 45,000</span>
               <a
                 class="book-btn"
-                href="https://wa.me/254712345678?text=I'm%20interested%20in%20the%20Romantic%20Getaway%20package"
+                href="https://wa.me/254790342156?text=I'm%20interested%20in%20the%20Romantic%20Getaway%20package"
                 target="_blank"
                 >Book Now</a
               >
@@ -283,7 +283,7 @@
 
           <article class="package-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636589/family_adventure.a_xi5llz.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636589/family_adventure.a_xi5llz.webp"
               alt="Family Adventure Package"
               loading="lazy"
             />
@@ -296,7 +296,7 @@
               <span class="package-price">Ksh 65,000</span>
               <a
                 class="book-btn"
-                href="https://wa.me/254712345678?text=I'd%20like%20to%20book%20the%20Family%20Adventure%20package"
+                href="https://wa.me/254790342156?text=I'd%20like%20to%20book%20the%20Family%20Adventure%20package"
                 target="_blank"
                 >Book Now</a
               >
@@ -305,7 +305,7 @@
 
           <article class="package-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636606/wellness_retreat.a_hnehyg.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636606/wellness_retreat.a_hnehyg.webp"
               alt="Wellness Retreat Package"
               loading="lazy"
             />
@@ -318,7 +318,7 @@
               <span class="package-price">Ksh 55,000</span>
               <a
                 class="book-btn"
-                href="https://wa.me/254712345678?text=I'm%20interested%20in%20the%20Wellness%20Retreat%20package"
+                href="https://wa.me/254790342156?text=I'm%20interested%20in%20the%20Wellness%20Retreat%20package"
                 target="_blank"
                 >Book Now</a
               >
@@ -327,7 +327,7 @@
 
           <article class="package-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636608/team_building.a_dljvqj.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636608/team_building.a_dljvqj.webp"
               alt="Corporate Escape Package"
               loading="lazy"
             />
@@ -340,7 +340,7 @@
               <span class="package-price">Ksh 80,000</span>
               <a
                 class="book-btn"
-                href="https://wa.me/254712345678?text=I'd%20like%20to%20book%20the%20Corporate%20Escape%20package"
+                href="https://wa.me/25490342156?text=I'd%20like%20to%20book%20the%20Corporate%20Escape%20package"
                 target="_blank"
                 >Book Now</a
               >
@@ -350,86 +350,67 @@
       </section>
 
       <!--Booking Section-->
-      <section id="booking">
-        <h2>Book Your Stay</h2>
-        <p class="section-intro">
-          Select a room and book your stay at our luxurious resort.
+      <form
+        id="booking-form"
+        action="https://formsubmit.co/collinsgitonga296@gmail.com"
+        method="POST"
+      >
+        <!-- Hidden Fields -->
+        <input type="hidden" name="_captcha" value="false" />
+
+        <!-- Name -->
+        <label for="name">Full Name:</label>
+        <input type="text" id="name" name="name" required />
+
+        <!-- Email -->
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+
+        <!-- Phone -->
+        <label for="phone">Phone Number:</label>
+        <input type="tel" id="phone" name="phone" required />
+
+        <!-- Room -->
+        <label for="room-type">Select Room:</label>
+        <select id="room-type" name="room-type" required>
+          <option value="Deluxe Ocean View">Deluxe Ocean View</option>
+          <option value="Private Villa">Private Villa</option>
+          <option value="Family Suite">Family Suite</option>
+          <option value="Penthouse">Penthouse</option>
+        </select>
+
+        <!-- Dates -->
+        <label for="check-in">Check-in Date:</label>
+        <input type="date" id="check-in" name="check-in" required />
+
+        <label for="check-out">Check-out Date:</label>
+        <input type="date" id="check-out" name="check-out" required />
+
+        <!-- Guests -->
+        <label for="guests">Number of Guests:</label>
+        <input
+          type="number"
+          id="guests"
+          name="guests"
+          min="1"
+          max="10"
+          required
+        />
+
+        <!-- Submit -->
+        <button type="submit">Book Now</button>
+      </form>
+      <!-- Popup -->
+      <article
+        id="confirmation-popup"
+        style="display: none"
+        class="confirmation-popup"
+      >
+        <p>
+          ✅ Booking received!<br />We will contact you within 15 minutes to
+          begin the payment process.
         </p>
-
-        <form id="booking-form">
-          <!-- Name Field -->
-          <article class="name-selection">
-            <label for="name">Full Name:&#42;</label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="Enter your full name"
-              required
-            />
-          </article>
-
-          <!-- Email Field -->
-          <article class="email-selection">
-            <label for="email">Email Address:&#42;</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Enter your email address"
-              required
-            />
-          </article>
-
-          <!-- Phone Number Field -->
-          <article class="phone-selection">
-            <label for="phone">Phone Number:&#42;</label>
-            <input
-              type="tel"
-              id="phone"
-              name="phone"
-              placeholder="Enter your phone number"
-              required
-            />
-          </article>
-
-          <!-- Room Selection -->
-          <article class="room-selection">
-            <label for="room-type">Select Room:</label>
-            <select id="room-type" name="room-type" required>
-              <option value="Deluxe Room">Deluxe Room</option>
-              <option value="Standard Room">Standard Room</option>
-              <option value="Suite">Suite</option>
-              <option value="Penthouse">Penthouse</option>
-            </select>
-          </article>
-
-          <!-- Date Selection -->
-          <article class="date-selection">
-            <label for="check-in">Check-in Date:&#42;</label>
-            <input type="date" id="check-in" name="check-in" required />
-
-            <label for="check-out">Check-out Date:</label>
-            <input type="date" id="check-out" name="check-out" required />
-          </article>
-
-          <!-- Guest Selection -->
-          <article class="guest-selection">
-            <label for="guests">Number of Guests:&#42;</label>
-            <input
-              type="number"
-              id="guests"
-              name="guests"
-              min="1"
-              max="10"
-              required
-            />
-          </article>
-
-          <!-- Submit Button -->
-          <button type="submit" class="btn-primary">Book Now</button>
-        </form>
-      </section>
+      </article>
 
       <!--Events and fun activities-->
       <section id="events">
@@ -442,7 +423,7 @@
         <article class="events-grid">
           <article class="event-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636572/cultural_nights.a_dajkxf.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636572/cultural_nights.a_dajkxf.webp"
               alt="Cultural Night"
               loading="lazy"
             />
@@ -455,7 +436,7 @@
 
           <article class="event-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636564/beachgames_dzgcrv.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636564/beachgames_dzgcrv.webp"
               alt="Beach Games"
               loading="lazy"
             />
@@ -468,7 +449,7 @@
 
           <article class="event-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636594/nature_walks.a_lmvufs.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636594/nature_walks.a_lmvufs.webp"
               alt="Nature Walks"
               loading="lazy"
             />
@@ -481,7 +462,7 @@
 
           <article class="event-card">
             <img
-              src="https://res.cloudinary.com/dejq3evca/image/upload/v1746636604/sunset_cruises.a_cuyc7n.webp"
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1746636604/sunset_cruises.a_cuyc7n.webp"
               alt="Sunset Cruise"
               loading="lazy"
             />
@@ -502,7 +483,11 @@
 
         <article class="testimonial-slider">
           <article class="testimonial active">
-            <img src="images/guest1.jpg" alt="Jane Mwangi" loading="lazy" />
+            <img
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1745602700/irene_gus6bk.webp"
+              alt="Jane Mwangi"
+              loading="lazy"
+            />
             <h3>Jane Mwangi</h3>
             <aside class="guest-title">Nairobi, Kenya</aside>
             <p>
@@ -513,7 +498,11 @@
           </article>
 
           <article class="testimonial">
-            <img src="images/guest2.jpg" alt="Michael Otieno" loading="lazy" />
+            <img
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1745602784/david_utvmx3.webp"
+              alt="Michael Otieno"
+              loading="lazy"
+            />
             <h3>Michael Otieno</h3>
             <aside class="guest-title">Kisumu, Kenya</aside>
             <p>
@@ -524,8 +513,12 @@
           </article>
 
           <article class="testimonial">
-            <img src="images/guest3.jpg" alt="Linda Achieng" loading="lazy" />
-            <h3>Linda Achieng</h3>
+            <img
+              src="https://res.cloudinary.com/dejq3evca/image/upload/f_auto,q_auto/v1745602782/ceo_y5s1y3.webp"
+              alt="Linda Achieng"
+              loading="lazy"
+            />
+            <h3>Ken Kinuthia</h3>
             <aside class="guest-title">Mombasa, Kenya</aside>
             <p>
               "The spa and wellness retreat helped me completely unwind. The
